media/css/base.css
body {
    padding: 0;
    margin: 0;
    color: #130f30;
    background-image: url('/media/images/background.png');
}
.bibtex_doi, .bibtex_pmid, .bibtex_url {
    float: right;
    margin-left : 10px;
}
.bibtex_title {
    font-weight: bold;
    margin-top: 30px;
}
.bibtex_volume, .bibtex_year, .bibtex_pages, .bibtex_journl {
    float: left;
    margin-right: 10px;
}
ul { margin: 0; }
#main {
    width: 100%; 
    background-image: url('/media/images/background-inv.png');
}
#footer {
    text-align: center;
    margin: 2em auto 0;
    color: #b5cce3;
    font-size: 0.7em;
}
h3 {
    font-weight: 400;
}
div.subcolumn {
    color: #b5cce3;
    font-family: 'Source Sans Pro', 'Roboto Condensed', sans-serif;
    width: 15em;
    font-weight: 400;
    float: left;
    margin-right: 35px;
}

a { color: #130f30; }
a#sub { 
    color: #b5cce3; 
    text-decoration: none;
}
a#sub:hover { 
    text-decoration: underline;
}
div.site {
    margin: 0 auto;
    width: 53em;
    min-height:25em;
    position: relative;
    font-family: 'Source Sans Pro', 'Roboto Condensed', sans-serif;
    text-align: justify;
}


#header {
    padding-top: 1em;
    margin: 0;
    text-align: right;
    font-family: 'Roboto Condensed', sans-serif;
}

#header a {
    text-decoration: none;
    padding: 0;
    margin: 0;
}

img.headerimg {
    padding-right: 7px;
}

#header h1 {
    padding-left: 1em;
    margin: 0;
    color: #55757B;
}

h1 {
   font-weight: 100;
}

.context-nav,
ul.breadcrumbs {
    list-style-type: none;
    padding: 0;
    position: absolute;
}

.context-nav { right:0; }

.breadcrumbs li { display: inline; }
.breadcrumbs a {
    text-decoration: none;
    color: #4D6680;
}

.context-nav a {
    color: #4D6680;
}

.breadcrumbs a:hover { text-decoration: underline; }
.breadcrumbs .separator { color: #4f6072; }

#sitenav {
    text-align: left;
    border-top: .2em solid #57534B;
    padding-top: 0.2em;
}

#sitenav ul { list-style-type: none; }

#sitenav li {
    display: inline;
    margin-left: .2em;
}

#sitenav a {
    text-decoration: none;
    padding: 0.2em;
}

#sitenav .selected a {
    color: #b5cce3;
    text-shadow: 0.05em 0.05em #333;
}

#content-header{
    padding-bottom:.5em;
    width: 35em;
}

#post-content {
    width: 25em;
    font-size: 1.4em;
    font-weight: 100;
    padding-bottom: 50px;
}
#content-header h1{
    border-bottom: 1px dotted #4d6680;
    margin-bottom:.5em;
}

.post-date{
    float:right;
    font-style:italic;
    font-size:.8em;
    
}

